TRIB-2722 integrate specs and scala test plugins and scoverage